--- a/WolvenKit/Views/Documents/W2rcMainFileView.xaml
+++ b/WolvenKit/Views/Documents/W2rcMainFileView.xaml
@@ -4,7 +4,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:reactiveUi="http://reactiveui.net"
-    xmlns:converters1="clr-namespace:WolvenKit.Functionality.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
@@ -13,6 +12,7 @@
     xmlns:templates="clr-namespace:WolvenKit.Views.Templates"
     xmlns:documents="clr-namespace:WolvenKit.ViewModels.Documents;assembly=WolvenKit.App"
     xmlns:shell="clr-namespace:WolvenKit.ViewModels.Shell;assembly=WolvenKit.App"
+    xmlns:converters="clr-namespace:WolvenKit.Converters"
     mc:Ignorable="d" 
     d:DesignHeight="450" d:DesignWidth="800"
     d:DataContext="{d:DesignInstance Type={x:Type documents:W2rcFileViewModel}}">
@@ -87,7 +87,7 @@
                             <Setter Property="BorderBrush" Value="Transparent" />
                             <Setter Property="BorderThickness" Value="0" />
                         </Style>
-                        <converters1:ExtensionToBitmapConverter x:Key="ExtensionToBmp" />
+                        <converters:ExtensionToBitmapConverter x:Key="ExtensionToBmp" />
 
                     </syncfusion:SfTreeGrid.Resources>
 
@@ -243,7 +243,7 @@
                                     SingleChannelCurveTemplate="{StaticResource SingleChannelCurveTemplate}"
                                     />
 
-                <converters1:CellStyleConverter x:Key="converter" />
+                <converters:CellStyleConverter x:Key="converter" />
 
             </Grid.Resources>
 
