--- a/WolvenKit/Views/Documents/W2rcMainFileView.xaml
+++ b/WolvenKit/Views/Documents/W2rcMainFileView.xaml
@@ -129,11 +129,11 @@
 
             <Grid.Resources>
 
-                <DataTemplate x:Key="CommmonTemplate">
+                <!--<DataTemplate x:Key="CommmonTemplate">
                     <TextBlock Padding="5" Text="{Binding Value}" Foreground="Gray" syncfusion:FocusManagerHelper.FocusedElement="True"/>
-                </DataTemplate>
+                </DataTemplate>-->
 
-                <DataTemplate x:Key="StringTemplateView">
+                <!--<DataTemplate x:Key="StringTemplateView">
                     <TextBox syncfusion:FocusManagerHelper.FocusedElement="True"
                                  Height="22"
                                  Margin="0"
@@ -149,9 +149,9 @@
                             </hc:EventTrigger>
                         </hc:Interaction.Triggers>
                     </TextBox>
-                </DataTemplate>
+                </DataTemplate>-->
 
-                <DataTemplate x:Key="ColorTemplateView">
+                <!--<DataTemplate x:Key="ColorTemplateView">
 
                     <syncfusion:ColorPickerPalette syncfusion:FocusManagerHelper.FocusedElement="True"
                                                        GenerateThemeVariants="False"
@@ -160,9 +160,9 @@
                                                        SelectedCommand="{Binding SelectedColorCommand}"
                                                        d:DataContext="{d:DesignInstance shell:RedColorViewModel}"
                                                        />
-                </DataTemplate>
+                </DataTemplate>-->
 
-                <DataTemplate x:Key="RefTemplateView">
+                <!--<DataTemplate x:Key="RefTemplateView">
                     <TextBox    syncfusion:FocusManagerHelper.FocusedElement="True"
                                     Height="22"
                                     Margin="0"
@@ -178,9 +178,9 @@
                             </hc:EventTrigger>
                         </hc:Interaction.Triggers>
                     </TextBox>
-                </DataTemplate>
+                </DataTemplate>-->
 
-                <DataTemplate x:Key="RedboolTemplate">
+                <!--<DataTemplate x:Key="RedboolTemplate">
                     <CheckBox syncfusion:FocusManagerHelper.FocusedElement="True"
                                   Margin="3,0,0,0"
                                   Padding="5"
@@ -197,32 +197,32 @@
                             </hc:EventTrigger>
                         </hc:Interaction.Triggers>
                     </CheckBox>
-                </DataTemplate>
+                </DataTemplate>-->
 
-                <DataTemplate x:Key="EnumTemplate">
+                <!--<DataTemplate x:Key="EnumTemplate">
                     <templates:EnumTemplateView
                             syncfusion:FocusManagerHelper.FocusedElement="True"
                             RedEnum="{Binding Property}"
                             d:DataContext="{d:DesignInstance shell:ChunkPropertyViewModel }" />
-                </DataTemplate>
+                </DataTemplate>-->
 
-                <DataTemplate x:Key="HandleTemplate">
+                <!--<DataTemplate x:Key="HandleTemplate">
                     <templates:HandleTemplateView
                             syncfusion:FocusManagerHelper.FocusedElement="True"
                             RedChunkPtr="{Binding Property}"
                           d:DataContext="{d:DesignInstance shell:ChunkPropertyViewModel }"
                           GoToChunkRequested="HandleTemplateView_OnGoToChunkRequested"
                           />
-                </DataTemplate>
+                </DataTemplate>-->
 
-                <DataTemplate x:Key="SingleChannelCurveTemplate">
+                <!--<DataTemplate x:Key="SingleChannelCurveTemplate">
                     <Button x:Name="CurveEditorButton" Content="Open Curve Editor"
                                 syncfusion:FocusManagerHelper.FocusedElement="True"
                                 d:DataContext="{d:DesignInstance shell:ChunkPropertyViewModel }"
                                 Click="CurveEditorButton_OnClick" Tag="{Binding Property}" />
-                </DataTemplate>
+                </DataTemplate>-->
 
-                <templates:EditableVariableDataTemplateSelector
+                <!--<templates:EditableVariableDataTemplateSelector
                                     x:Key="DataTemplateSelector"
                                     CommmonTemplate="{StaticResource CommmonTemplate}"
 
@@ -241,9 +241,9 @@
                                     ColorTemplateView="{StaticResource ColorTemplateView}"
 
                                     SingleChannelCurveTemplate="{StaticResource SingleChannelCurveTemplate}"
-                                    />
+                                    />-->
 
-                <converters:CellStyleConverter x:Key="converter" />
+                <!--<converters:CellStyleConverter x:Key="converter" />-->
 
             </Grid.Resources>
 
@@ -304,7 +304,6 @@
                                 Grid.Column="1"
                                 PropertyExpandMode="NestedMode"
                                 AutoGeneratingPropertyGridItem="PropertyGrid_AutoGeneratingPropertyGridItem"
-
                 >
 
                             </syncfusion:PropertyGrid>
