--- a/WolvenKit/Views/Templates/RedColorEditor.xaml
+++ b/WolvenKit/Views/Templates/RedColorEditor.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="WolvenKit.Views.Editors.RedIntegerEditor"
+<UserControl x:Class="WolvenKit.Views.Editors.RedColorEditor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,12 +7,16 @@
              xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="400">
-    <Grid DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}}">
-        <syncfusion:UpDown
-            Value="{Binding Value}"
-            MinValue="{Binding MinValue, Mode=OneWay}"
-            MaxValue="{Binding MaxValue, Mode=OneWay}"
-            NumberDecimalDigits ="{Binding NumberDecimalDigits, Mode=OneWay}"
+
+    <Grid DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:RedColorEditor}}}">
+
+        <syncfusion:ColorPickerPalette
+            syncfusion:FocusManagerHelper.FocusedElement="True"
+            GenerateThemeVariants="False"
+            Padding="3,-4,0,0"
+            Color="{Binding Color}"
+            SelectedCommand="{Binding SelectedColorCommand}"
             />
+        
     </Grid>
 </UserControl>
