--- a/WolvenKit/Views/Documents/W2rcMainFileView.xaml
+++ b/WolvenKit/Views/Documents/W2rcMainFileView.xaml
@@ -17,14 +17,21 @@
     d:DesignHeight="450" d:DesignWidth="800"
     d:DataContext="{d:DesignInstance Type={x:Type documents:W2rcFileViewModel}}">
     
-    <Grid >
+    <Grid>
 
         <Grid.Resources>
             <ResourceDictionary>
-                <ResourceDictionary.MergedDictionaries>
+                <!--<ResourceDictionary.MergedDictionaries>
                     <hc:ThemeResources RequestedTheme="Dark" />
                     <hc:Theme />
+                </ResourceDictionary.MergedDictionaries>-->
+
+                <ResourceDictionary.MergedDictionaries>
+                    <ResourceDictionary Source="pack://application:,,,/AdonisUI;component/ColorSchemes/Dark.xaml"/>
+                    <ResourceDictionary Source="pack://application:,,,/AdonisUI.ClassicTheme;component/Resources.xaml"/>
                 </ResourceDictionary.MergedDictionaries>
+
+                
 
                 <Style TargetType="{x:Type syncfusion:AdvancedFilterControl}">
                     <Setter Property="CanGenerateUniqueItems" Value="False" />
