--- a/WolvenKit/Views/Documents/DocumentView.xaml
+++ b/WolvenKit/Views/Documents/DocumentView.xaml
@@ -9,7 +9,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:templates="clr-namespace:WolvenKit.Views.Templates"
     xmlns:documents="clr-namespace:WolvenKit.ViewModels.Documents;assembly=WolvenKit.App"
-    xmlns:documents1="clr-namespace:WolvenKit.Views.Documents"
+    xmlns:documents1="clr-namespace:WolvenKit.Views.Documents" xmlns:converters="clr-namespace:WolvenKit.Converters"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d"
@@ -28,7 +28,7 @@
                 <documents1:W2rcMainFileView/>
             </DataTemplate>
 
-            <templates:RedDocumentTemplateSelector x:Key="RedDocumentTemplateSelector"
+            <converters:RedDocumentTemplateSelector x:Key="RedDocumentTemplateSelector"
                                                    MainTemplate="{StaticResource MainTemplate}"
                                                    BufferTemplate="{StaticResource BufferTemplate}" />
         </Grid.Resources>
