--- a/WolvenKit/Views/HomePage/Pages/SettingsPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/SettingsPageView.xaml
@@ -1,5 +1,5 @@
 <reactiveUi:ReactiveUserControl
-    x:TypeArguments="pages1:SettingsPageViewModel"
+    x:TypeArguments="viewmodels:SettingsPageViewModel"
     x:Class="WolvenKit.Views.HomePage.Pages.SettingsPageView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -11,8 +11,7 @@
     xmlns:sp="clr-namespace:WolvenKit.Views.HomePage.Pages"
     xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
     xmlns:ucontrols="clr-namespace:WolvenKit.Controls;assembly=WolvenKit.App"
-    xmlns:pages="clr-namespace:WolvenKit.ViewModels.HomePage.Pages;assembly=WolvenKit.App"
-    xmlns:pages1="clr-namespace:WolvenKit.ViewModels.HomePage.Pages">
+    xmlns:viewmodels="clr-namespace:WolvenKit.ViewModels">
    
 
     <Grid
