--- a/WolvenKit/Views/Templates/RedCollectionEditor.xaml
+++ b/WolvenKit/Views/Templates/RedCollectionEditor.xaml
@@ -7,6 +7,7 @@
         xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
         xmlns:adonisControls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
         xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
+        xmlns:viewmodels="clr-namespace:WolvenKit.ViewModels"
         mc:Ignorable="d"
         Title="Collection Editor"
         Height="400"
@@ -17,7 +18,7 @@
     </Window.Style>
 
     <Window.DataContext>
-        <local:RedCollectionEditorViewModel/>
+        <viewmodels:RedCollectionEditorViewModel/>
     </Window.DataContext>
 
     <Window.Resources>
